clang/test/BSC/Negative/Ownership/owned_trait/owned_trait.cbs
// RUN: %clang_cc1 -ast-dump -verify %s
trait F {
    int increase(This* this);
};

int int::increase(This* this) {
  return *this += 1;
}

impl trait F for int;


// typedef owned trait F OwnedTraitF;

void test(owned int* p0, int* owned p00) {
    owned trait F* p1;  //expected-error {{'trait F' cannot be qualified by 'owned'}}
    trait F* owned p2;  //expected-error {{'trait F *' cannot be qualified by 'owned'}}
    trait F* owned * p3;    //expected-error {{'trait F *' cannot be qualified by 'owned'}}
    trait F** owned p4; //expected-error {{'trait F **' cannot be qualified by 'owned'}}

    owned trait F* p5 = p0;  //expected-error {{'trait F' cannot be qualified by 'owned'}}
    trait F* p6 = p0;   //expected-error {{incompatible owned types, cannot cast 'owned int *' to 'trait F *'}}
                        //expected-error@-1 {{expected a pointer type which has implemented 'trait F', found 'owned int'}}

    trait F* owned p7 = p00; //expected-error {{'trait F *' cannot be qualified by 'owned'}}
    trait F* p8 = p00; //expected-error {{incompatible owned types, cannot cast 'int *owned' to 'trait F *'}}
}